pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotInstantiateAbstractModule.pkl
abstract module cannotInstantiateAbstractModule

res1 = new module {}